<resources>
    <string name="app_name">Meal Clue</string>
    <string name="login_background">Login Background</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="social">Social</string>
    <string name="plans">Plans</string>
    <string name="settings">Settings</string>
    <string name="next_recipe">Next Recipe</string>
    <string name="previous_recipe">Previous Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="lunch">Lunch</string>
    <string name="plan_name">Plan Name</string>
    <string name="cook">Cook</string>
    <string name="delay">Delay</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="back">Back</string>
    <string name="new_plan">New Plan</string>
    <string name="avatar">Avatar</string>
    <string name="user_full_name">User Full Name</string>
    <string name="heart_count">Heart Count</string>
    <string name="goal">Goal</string>
    <string name="recipe_number">Recipe Number</string>
    <string name="unset">Unset</string>
    <string name="add_to_top">Add to Top</string>
    <string name="add_top_bottom">Add top Bottom</string>
    <string name="delete">Delete</string>
    <string name="mirror">Mirror</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="search">Search</string>
    <string name="enter_keywords">Enter keywords</string>
    <string name="enter_value">Enter value</string>
    <string name="label">Label</string>
    <string name="profile_message">Profile message</string>
    <string name="no_plan_set_as_goal">No Plan set as Goal</string>
    <string name="category_name">Category Name</string>
    <string name="sub_category_name">Sub Category Name</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="input_plan_name">Input Plan Name</string>
    <string name="set_as_goal">Set Goal</string>
    <string name="edit_plan_name">Edit Plan Name</string>
    <string name="update">Update</string>
    <string name="duplicate">Duplicate</string>
    <string name="unset_as_goal">Ungoal</string>
    <string name="login_register">Login / Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="k_meal_clue_prefs">K_MEAL_CLUE_PREFS</string>
    <string name="k_logged_in_user_id">K_LOGGED_IN_USER_ID</string>
    <string name="save_settings">Save Settings</string>
    <string name="name">Name</string>
    <string name="postal">Postal</string>
    <string name="theme">Theme</string>
    <string name="k_selected_theme_mode">SELECTED_THEME_MODE</string>
    <string name="finish">Finish</string>
    <string name="finished_all_recipes">Finished all recipes</string>
    <string name="reset_plan">Reset Plan</string>
    <string name="log_out">Log Out</string>
    <string name="set_a_goal_plan">Set A Goal Plan</string>
    <string name="reset_goal_plan">Reset Goal Plan</string>
    <string name="user_should_set_postal_code">User should set postal code</string>
    <string name="empty_user_base">Empty User Base</string>
    <string name="not_meal_plan_found">Not meal plan found</string>
    <string name="hearts">Hearts</string>
    <string name="fork">Fork</string>
    <string name="heart_unicode">❤</string>
    <string name="fonts">Fonts</string>
    <string name="color">Color</string>
    <string name="set_as_private">Set Private</string>
    <string name="set_as_public">Set Public</string>
    <string-array name="arr_theme_modes">
        <item>Dark</item>
        <item>Light</item>
        <item>System</item>
    </string-array>
    <string-array name="arr_fonts">
        <item>Lexend</item>
        <item>Roboto</item>
    </string-array>


</resources>