<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_x_large"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnBack"
        style="@style/ButtonField"
        android:layout_weight="1"
        android:text="@string/back" />

    <Space
        android:visibility="gone"
        android:id="@+id/spacer"
        style="@style/SpaceMedium"/>

    <Button
        android:id="@+id/btnAddNewRecipe"
        style="@style/ButtonBase"
        android:layout_weight="1"
        android:text="@string/add_recipe"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAddNewPlan"
        style="@style/ButtonBase"
        android:layout_weight="1"
        android:text="@string/new_plan"
        android:visibility="gone" />
    <Button
        android:id="@+id/btnFinishCooking"
        style="@style/ButtonPrimary"
        android:layout_weight="1"
        android:text="@string/finish"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnFork"
        android:layout_marginStart="@dimen/space_small"
        style="@style/ButtonPrimary"
        android:layout_weight="1"
        android:text="@string/fork"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnHeart"
        android:layout_marginStart="@dimen/space_small"
        android:paddingStart="@dimen/space_medium"
        android:paddingEnd="@dimen/space_medium"
        style="@style/ButtonPrimary"
        android:layout_width="wrap_content"
        android:layout_weight="0"
        android:text="@string/heart_unicode"
        android:visibility="gone" />


</LinearLayout>