<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearGoalSetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtGoalRibbon"
            style="@style/TextLight"
            android:text="@string/goal"
            android:layout_marginEnd="@dimen/space_medium"
            android:textColor="@color/colorTertiary" />

        <Button
            android:id="@+id/btnToggleSetGoal"
            style="@style/ButtonPrimary"
            android:padding="@dimen/space_x_small"
            android:text="@string/set_as_goal" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearGoalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPlanName"
            style="@style/TextBold"
            android:text="@string/plan_name"
            android:visibility="gone"
            android:textSize="@dimen/text_xx_large" />

        <EditText
            android:id="@+id/inpPlanName"
            style="@style/TextBold"
            android:inputType="text"
            android:autofillHints="@string/input_plan_name"
            android:hint="@string/input_plan_name"
            android:textColorHint="#78909C"
            android:textSize="@dimen/text_xx_large" />

        <TextView
            android:layout_marginStart="@dimen/space_medium"
            android:id="@+id/txtPlanPercent"
            style="@style/TextLight"
            android:visibility="gone"
            android:text="@string/_5"
            android:textSize="@dimen/text_xx_large" />

        <ImageButton
            android:contentDescription="@string/edit_plan_name"
            android:id="@+id/btnEditPlanName"
            android:visibility="gone"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_width="@dimen/text_large"
            android:layout_height="@dimen/text_large"
            android:backgroundTint="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pen" />
    </LinearLayout>

    <Space style="@style/SpaceMedium" />

    <TextView
        style="@style/TextLight"
        android:text="@string/recipe_number"
        android:visibility="gone" />

    <Space
        style="@style/SpaceXLarge"
        android:visibility="gone" />

    <Space style="@style/SpaceXLarge" />
</LinearLayout>