<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:contentDescription="@string/avatar"
        android:id="@+id/imgProfileAvatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile" />

    <Space style="@style/SpaceMedium" />

    <!-- User Info Column -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAppName"
            style="@style/TextLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/txtUserName"
            style="@style/TextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_full_name"
            android:textColor="@color/colorContrast"
            android:textSize="@dimen/text_large" />

        <TextView
            android:id="@+id/txtHeartCount"
            style="@style/TextExtraLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/heart_count"
            android:textSize="@dimen/text_small" />
    </LinearLayout>

</LinearLayout>