<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/avatar" />
    </androidx.cardview.widget.CardView>

    <Space style="@style/SpaceMedium" />

    <!-- User Info Column -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/txtFullName"
            style="@style/TextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_full_name"
            android:textColor="@color/colorContrast"
            android:textSize="@dimen/text_large" />

        <TextView
            android:id="@+id/txtHeartCount"
            style="@style/TextExtraLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/heart_count"
            android:textSize="@dimen/text_small" />
    </LinearLayout>
</LinearLayout>
