<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:alpha="0.7"
            android:contentDescription="@string/login_background"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_bottom_overlay" />
    </FrameLayout>

    <!-- title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            style="@style/TextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_xxx_large" />
    </LinearLayout>

    <!-- action buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/space_xxx_large">

        <TextView
            style="@style/TextLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.3"
            android:text="@string/welcome" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_xxx_large" />

        <Button
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_caret_right"
            android:paddingStart="30dp"
            android:paddingEnd="16dp"
            android:text="@string/email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_x_large" />

        <Button
            style="@style/ButtonContrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_google_logo"
            android:paddingStart="38dp"
            android:paddingEnd="14dp"
            android:text="@string/google" />

    </LinearLayout>

</LinearLayout>