<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorBase">

            <ImageView
                android:id="@+id/imgThumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/login_background" />

            <ImageView
                android:id="@+id/imgCheckedIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_check" />
        </FrameLayout>

        <Space style="@style/SpaceLarge" />

        <TextView
            android:id="@+id/txtName"
            style="@style/TextSemiBold"
            android:text="@string/recipe_name"
            android:textSize="@dimen/text_large" />

        <Space style="@style/SpaceExpand"/>

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="@dimen/text_large"
            android:layout_height="@dimen/text_large"
            android:backgroundTint="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pen"
            app:tint="@color/colorPrimary" />


        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="@dimen/text_large"
            android:layout_height="@dimen/text_large"
            android:backgroundTint="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_plus"
            android:visibility="gone"
            app:tint="@color/colorPrimary" />
    </LinearLayout>

    <!-- action butons -->
    <LinearLayout
        android:id="@+id/linearEditingActions"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary"
            />
        <Space style="@style/SpaceExpand"/>
        <Button
            android:id="@+id/btnMirror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mirror"
            android:textColor="@color/colorPrimary"
            />
        <Space style="@style/SpaceExpand"/>
        <Button
            android:id="@+id/btnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:textColor="@color/colorPrimary"
            />
        <Space style="@style/SpaceExpand"/>
        <Button
            android:id="@+id/btnDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
</LinearLayout>