<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_large"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorBase"
            android:layout_marginEnd="@dimen/space_large"
            >

            <ImageView
                android:id="@+id/imgThumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/login_background" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/imgCheckedIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_check" />
        </FrameLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/txtName"
            style="@style/TextLight"
            android:text="@string/recipe_name"
            android:layout_marginEnd="@dimen/space_medium"
            android:textSize="@dimen/text_x_small" />

       <ImageButton
            android:id="@+id/btnMainAction"
            android:layout_width="@dimen/text_large"
            android:layout_height="@dimen/text_large"
            android:backgroundTint="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_plus"

            app:tint="@color/colorPrimary" />
    </LinearLayout>

    <!-- action butons -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linearEditingActions"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_small"
            />
        <Space style="@style/SpaceExpand"/>
        <Button
            android:id="@+id/btnDuplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duplicate"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_small"
            />
        <Space style="@style/SpaceExpand"/>
        <Button
            android:id="@+id/btnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_small"
            />
        <Space style="@style/SpaceExpand"/>
        <Button
            android:id="@+id/btnDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_small"
            />
    </LinearLayout>
</LinearLayout>